Fixed the scrollbar and head background for the table

--- a/src/index.css
+++ b/src/index.css
@@ -61,6 +61,7 @@ nav > div > a.active {
 .table-container {
     height: 100%;
 }
+
 table {
     display: flex;
     flex-flow: column;
@@ -86,4 +87,22 @@ table thead,
 table tbody tr {
     display: table;
     table-layout: fixed;
+}
+
+
+
+.table-scroll::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0, 0, 0, 0.3);
+    background-color: #F5F5F5;
+    border-radius: 10px;
+}
+
+.table-scroll::-webkit-scrollbar {
+    width: 0.5em;
+    background-color: #F5F5F5;
+}
+
+.table-scroll::-webkit-scrollbar-thumb {
+    border-radius: 10px;
+    background-image: -webkit-gradient(linear, left bottom, left top, color-stop(0.44, rgba(167, 188, 215, 0.6)), color-stop(0.86, rgba(224, 142, 37, 0.6)));
 }
